Add valueOf call to avoid warnings about deprecated method